添加 inference_rtc RTC 架构框架和文档
- 创建 inference_rtc/ 目录结构
- 实现共享内存协议 (Python + C++ 头文件)
- 实现三次样条插值器和安全限制器
- 实现 Python 推理进程和伺服进程
- 添加轨迹缓冲区 (Phase B 框架)
- 添加端到端测试和共享内存通信测试
- 创建详细文档 (COMPLETED.md, TODO.md)
- 修改 arx5-sdk CMakeLists.txt 以支持 conda 环境
- 更新 .gitignore 忽略 dsrl_ajwagen 等子仓库

--- a/arx5-sdk/CMakeLists.txt
+++ b/arx5-sdk/CMakeLists.txt
@@ -32,6 +32,9 @@ include_directories(
     $ENV{CONDA_PREFIX}/include/urdfdom_headers
 )
 
+# Add conda lib directory for kdl_parser, soem, etc.
+link_directories($ENV{CONDA_PREFIX}/lib)
+
 add_library(ArxJointController SHARED
     src/app/joint_controller.cpp
     src/utils.cpp
